--- a/style.css
+++ b/style.css
@@ -1,29 +1,47 @@
+@font-face {
+    font-family: 'dice';
+    src: url('static/dice.ttf') format('ttf'),
+    url('static/dice.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
     font-family: Roboto, sans-serif;
+    color: white;
 }
 
 body {
     box-sizing: border-box;
     margin: 0;
     user-select: none;
+    background-color: #333;
+}
+
+button {
+    color: black;
 }
 
 .dice-wrapper {
-    border: 1px solid gray;
     width: 100%;
-    height: 50dvh;
+    height: 100dvh;
 }
 
 .dice {
     text-align: center;
-    font-size: 64px;
+    font-family: 'dice', sans-serif;
+    font-size: 48dvh;
+}
+
+.player-sum {
+    font-size: 24px;
     font-weight: bold;
-    user-select: none;
+    padding: 5px 200px;
 }
 
 .history__body {
     display: flex;
-    list-style: revert;
+    list-style: numeric;
 }
 .step {
     display: flex;
@@ -35,5 +53,5 @@ body {
     height: 50px;
 }
 .step div {
-    border: 1px solid black;
+    border: 1px solid white;
 }
