--- a/style.css
+++ b/style.css
@@ -6,6 +6,19 @@
     font-style: normal;
 }
 
+:root {
+    --bg-color: #323437;
+    --main-color: #e2b714;
+    --caret-color: #e2b714;
+    --sub-color: #646669;
+    --sub-alt-color: #2c2e31;
+    --text-color: #d1d0c5;
+    --error-color: #ca4754;
+    --error-extra-color: #7e2a33;
+    --colorful-error-color: #ca4754;
+    --colorful-error-extra-color: #7e2a33
+}
+
 * {
     font-family: Roboto, sans-serif;
     color: white;
@@ -15,7 +28,21 @@ body {
     box-sizing: border-box;
     margin: 0;
     user-select: none;
-    background-color: #333;
+    background-color: var(--bg-color);
+}
+
+.controls {
+    display: flex;
+    padding: 5px 10px;
+    background-color: var(--sub-alt-color);
+}
+.control {
+    margin: 0 10px;
+    color: var(--sub-color);
+    transition: color .2s
+}
+.control:hover {
+    color: var(--text-color);
 }
 
 button {
@@ -33,25 +60,46 @@ button {
     font-size: 48dvh;
 }
 
+.history__header {
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
+
 .player-sum {
     font-size: 24px;
     font-weight: bold;
-    padding: 5px 200px;
+    padding: 15px;
+    color: var(--main-color);
 }
 
 .history__body {
+    width: calc(100% - (24px * 2));
     display: flex;
-    list-style: numeric;
+    flex-direction: column-reverse;
+    margin: 0 24px;
+    padding: 0;
 }
 .step {
+    background-color: var(--bg-color);
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     font-size: 24px;
     font-weight: bold;
-    width: 100px;
     height: 50px;
+    border-radius: 8px;
 }
-.step div {
-    border: 1px solid white;
+.step:nth-child(even) {
+    background-color: var(--sub-alt-color);
+}
+
+.player {
+    display: flex;
+    align-items: end;
+}
+
+.player__dice {
+    font-size: 24px;
+    font-family: 'dice', sans-serif;
 }
